fix invite too big issue

--- a/css/panels.css
+++ b/css/panels.css
@@ -373,7 +373,7 @@ body {
 }
 
 #invite.panel-card.panel-card--invite .invite-img {
-  width: min(280px, 72vw);
+  width: min(252px, 64vw);
   max-width: 100%;
 }
 
@@ -459,7 +459,7 @@ body {
   }
 
   #invite.panel-card.panel-card--invite .invite-img {
-    width: min(340px, 52%);
+    width: min(304px, 46%);
   }
 }
 
@@ -981,7 +981,7 @@ footer.panel-card--footer .footer__monogram {
   }
 
   #invite.panel-card.panel-card--invite .invite-img {
-    width: min(270px, 78vw);
+    width: min(242px, 70vw);
   }
 
   .map.map--embed iframe {
